# BoxCar

./: CMakeLists.txt  boxcar.json  format.sh  index.html
cmake/: VersionFromGit.cmake
src/: Dependency.cpp  Dependency.hpp  Logger.cpp  Logger.hpp  Package.cpp  Package.hpp  Validation.cpp  Validation.hpp  common.h  dependency.c  dependency.h  library.h  log.c  log.h  memory.c  memory.h  package.c  package.h  ref.h  util.c  util.h  version.h.in
src/app/: main.c  main.cpp
src/libs/: cJSON.c  cJSON.h
src/server/: main.cpp
src/server/http/: Connection.cpp  Connection.hpp  ConnectionManager.cpp  ConnectionManager.hpp  Header.hpp  MimeTypes.cpp  MimeTypes.hpp  Reply.cpp  Reply.hpp  Request.hpp  RequestHandler.cpp  RequestHandler.hpp  RequestParser.cpp  RequestParser.hpp  Server.cpp  Server.hpp
